--- a/s3b0.service.example
+++ b/s3b0.service.example
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Restart=always
 RestartSec=1
-User=tinker
+User=s3b0
 Environment=S3B0_TOKEN=bot_token
 ExecStart=/path/to/s3b0/s3b0.py
 
